Add bundle identifiers for main application and launcher in Info.plist

--- a/cuImage/Info.plist
+++ b/cuImage/Info.plist
@@ -26,6 +26,8 @@
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>LSUIElement</key>
 	<true/>
+	<key>LauncherBundleIdentifier</key>
+	<string>com.hulizhen.cuImageLauncher</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
