--- a/cuImageLauncher/Info.plist
+++ b/cuImageLauncher/Info.plist
@@ -26,7 +26,7 @@
 	<true/>
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
-	<key>MainApplicationBundleIdentifier</key>
+	<key>MainBundleIdentifier</key>
 	<string>com.hulizhen.cuImage</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2017 HuLizhen. All rights reserved.</string>
