Update project organization name

--- a/cuImageLauncher/Info.plist
+++ b/cuImageLauncher/Info.plist
@@ -29,7 +29,7 @@
 	<key>MainBundleIdentifier</key>
 	<string>com.hulizhen.cuImage</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2017 HuLizhen. All rights reserved.</string>
+	<string>Copyright © 2017 Lizhen Hu. All rights reserved.</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
