--- a/cuImage/Info.plist
+++ b/cuImage/Info.plist
@@ -34,7 +34,7 @@
 		<true/>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2017 HuLizhen. All rights reserved.</string>
+	<string>Copyright © 2017 Lizhen Hu. All rights reserved.</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
